Fix contrast in code

--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,7 @@ a:focus {
 .products {
   background-color: #30536a;
 }
+
+.lowlight {
+  color: #39384b;
+}
